--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,21 +12,17 @@ body {
     line-height: 1.6;
 }
 
-
-header {
-    height: 100vh; /* full screen height */
-    background: url('../images/versailles.jpg') no-repeat center center/cover; 
-    color: #fff; 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+.header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0; /* it starts at the very left */
+    z-index: 1000;
 }
 
-nav {
-    width: 100%;
+.header-nav {
     padding: 1em 2em;
-    background: rgba(0, 0, 0, 0.6); /* to make it semi transparent black */
+    background: #333; /* Semi-transparent black */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,7 +31,8 @@ nav {
 .logo {
     font-size: 1.8em;
     font-weight: bold;
-    color: #FFDE4D; /* gold color, might replace later */
+    text-decoration: none;
+    color: #ffd700; 
 }
 
 .nav-links {
@@ -44,18 +41,24 @@ nav {
     gap: 1.5em;
 }
 
-.nav-links a {
+a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
-    font-size: 1.1em;
     transition: color 0.3s;
+    font-size: 1.1em;
 }
 
-.nav-links a:hover {
-    color: #FFDE4D; /* Gold on hover */
+a:hover {
+    color: #ffd700;
 }
-
+main {
+    height: 100vh; /* full screen height */
+    background: url('../images/versailles.jpg') no-repeat center center/cover; 
+    color: #fff; 
+    display: flex;
+    flex-direction: column;
+}
 /* Hero Section */
 .intro {
     text-align: center;
