--- a/pages/assets/css/contact.css
+++ b/pages/assets/css/contact.css
@@ -12,6 +12,7 @@ body {
     line-height: 1.6;
 }
 
+/* Header */
 .header {
     width: 100%;
     position: fixed;
@@ -59,7 +60,6 @@ main {
 }
 
 main h1 {
-    /* border: 3px solid red; */
     text-align: center;
     margin-top: 4em;
 }
@@ -67,20 +67,16 @@ main h1 {
 .tourist-offices {
     width: 80%;
     margin: auto;
-    /* border: 3px solid blue; */
 }
 
 .office {
-    /* display: flex; */
     padding: 2em 0;
     clear: both;
 }
 
 .office .image {
-    /* border: 3px solid red; */
     float: left;
     padding: 1em 0; 
-    /* padding: haut droite bas gauche;  */
     margin: 0 0 0 3em;
 }
 
@@ -125,24 +121,7 @@ main h1 {
     clear: both;
 }
 
-.contact-form {
-    text-align: center;
-    border: 3px solid red;
-    padding-top: 3em;
-    width: 70%;
-    margin: auto;
-}
-
 /* Footer */
-body .footer {
-    background: #333;
-    color: #fff;
-    /* text-align: center; */
-    padding: 2em 0;
-    margin-top: 2em;
-    font-size: 0.9em;
-}
-
 footer {
     text-align: center;
     padding: 1em;
