Add : services full page + assets

--- a/pages/assets/css/events.css
+++ b/pages/assets/css/events.css
@@ -71,7 +71,7 @@ h1 {
 }
 
 article {
-    flex: 31%;
+    flex: 0 0 31%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     border: 1px solid #ddd;
